--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginHorizontal="10dp"
         android:visibility="gone"
-        android:id="@+id/graph"
+        android:id="@+id/graphLive"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
