--- a/app/src/main/res/layout/activity_global_comparison.xml
+++ b/app/src/main/res/layout/activity_global_comparison.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".GlobalComparisonActivity">
+    <ScrollView
+        android:id="@+id/svSharedPrefScroll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <TextView
         android:id="@+id/tvFetchError"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:gravity="center"
         android:textSize="22sp"
         android:text="@string/data_fetching"
         />
+    </ScrollView>
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/graphGlobal"
         android:layout_height="match_parent"
@@ -21,4 +28,4 @@
         android:visibility="gone"
         android:layout_margin="10dp"
         />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
